# Alien-Archive

./: .gitignore  Cargo.toml  README.md  assets
.codex/environments/: environment.toml
assets/data/assets/: overworld_assets.ron
assets/data/maps/: demo.ron  facility_ruin_01.ron  overworld.ron  overworld_landing_site.ron  overworld_landing_site_2.ron
assets/data/ui/: inventory_assets.ron
crates/content/: Cargo.toml
crates/content/data/: cutscenes.ron  events.ron  items.ron  objectives.ron
crates/content/src/: assets.rs  codex.rs  cutscenes.rs  events.rs  items.rs  lib.rs  map.rs  objectives.rs  semantics.rs  validation.rs
crates/editor/: Cargo.toml
crates/editor/assets/icons/lucide/: README.md
crates/editor/assets/icons/tools/: README.md
crates/editor/src/: asset_registry.rs  cutscenes.rs  dialogs.rs  events.rs  inspector.rs  main.rs  map_document.rs  native_menu.rs  panels.rs  terrain.rs
crates/editor/src/app/: commands.rs  config.rs  maps.rs  mod.rs  model.rs  outliner.rs  state.rs
crates/editor/src/assets/: draft.rs  import.rs  labels.rs  mod.rs  thumbnails.rs
crates/editor/src/canvas/: editor.rs  mod.rs  rendering.rs
crates/editor/src/tools/: mod.rs
crates/editor/src/ui/: README.md  asset_grid.rs  badge.rs  buttons.rs  command_bar.rs  fields.rs  filter_bar.rs  header.rs  layer_row.rs  mod.rs  modal.rs  panel_surface.rs  property_grid.rs  resource_list.rs  rule_card.rs  search.rs  sections.rs  side_rail.rs  tabs.rs  theme.rs  toolbar.rs  tree.rs  validation_panel.rs
crates/editor/src/util/: geometry.rs  ids.rs  mod.rs  sanitize.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs  objectives.rs  player.rs  save.rs  world.rs
crates/game/src/scenes/: activity_log.rs  cutscene_scene.rs  debug_overlay.rs  event_system.rs  facility_scene.rs  field_hud.rs  game_menu_activity.rs  game_menu_art.rs  game_menu_codex.rs  game_menu_feedback.rs  game_menu_inventory.rs  game_menu_map.rs  game_menu_profile.rs  game_menu_scene.rs  game_scene.rs  inventory_scene.rs  main_menu.rs  mod.rs  notice_system.rs  overworld_scene.rs  pause_scene.rs  profile_derived.rs  profile_scene.rs  profile_status.rs  quick_items.rs  rewards.rs  scan_system.rs  world_runtime.rs  zone_system.rs
crates/game/src/ui/: game_menu_content.rs  layout.rs  localization.rs  menu_style.rs  menu_widgets.rs  mod.rs  text.rs
crates/game/src/world/: map.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: app.rs  assets.rs  audio.rs  camera.rs  collision.rs  input.rs  lib.rs  math.rs  scene.rs
crates/runtime/src/renderer/: mod.rs  (+1 more)
docs/: AGENT_ARCHITECTURE.md  EDITOR_ROADMAP.md  GAME_MENU_ARCHITECTURE.md  HUD_ART_DIRECTION.md  PROJECT_STATE.md
tools/: README.md  generate_menu_assets.py
tools/sprite_sheet_compactor/: Cargo.toml  README.md
tools/sprite_sheet_compactor/src/: main.rs
