[workspace]
members = ["crates/runtime", "crates/game", "tools/sprite_sheet_compactor", "crates/editor"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
pollster = "0.4"
ron = "0.12"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
wgpu = "29"
winit = "0.30"
