[package]
name = "editor"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
content = { package = "alien_archive_content", path = "../content" }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
image.workspace = true
rfd = "0.17.2"
ron.workspace = true
serde.workspace = true
